--- a/templates/gcp-vm/template.yaml
+++ b/templates/gcp-vm/template.yaml
@@ -4,6 +4,9 @@ metadata:
   name: gcp-vm
   title: Provision GCP VM
   description: Provisions a GCP VM using Terraform
+  annotations:
+    backstage.io/managed-by-location: url:https://raw.githubusercontent.com/regmisan/dev-portal-gcp/main/templates/gcp-vm/template.yaml
+    backstage.io/managed-by-origin-location: url:https://raw.githubusercontent.com/regmisan/dev-portal-gcp/main/templates/gcp-vm/template.yaml
 spec:
   owner: user:guest
   type: service
