--- a/templates/gcp-vm/template.yaml
+++ b/templates/gcp-vm/template.yaml
@@ -40,7 +40,7 @@ spec:
       name: Fetch Skeleton
       action: fetch:template
       input:
-        url: ./content
+        url: https://github.com/regmisan/dev-portal-gcp/tree/main/templates/gcp-vm/content
         values:
           projectId: ${{ parameters.projectId }}
           region: ${{ parameters.region }}
