--- a/templates/gcp-vm/template.yaml
+++ b/templates/gcp-vm/template.yaml
@@ -2,14 +2,14 @@ apiVersion: scaffolder.backstage.io/v1beta3
 kind: Template
 metadata:
   name: gcp-vm
-  namespace: default  # ✅ Required to avoid "Entity not found"
+  namespace: default
   title: Provision GCP VM
   description: Provisions a GCP VM using Terraform
   annotations:
     backstage.io/managed-by-location: url:https://raw.githubusercontent.com/regmisan/dev-portal-gcp/main/templates/gcp-vm/template.yaml
     backstage.io/managed-by-origin-location: url:https://raw.githubusercontent.com/regmisan/dev-portal-gcp/main/templates/gcp-vm/template.yaml
 spec:
-  owner: user:guest
+  owner: user:default/guest
   type: service
 
   parameters:
@@ -37,10 +37,11 @@ spec:
 
   steps:
     - id: fetch
-      name: Fetch Skeleton
+      name: Fetch Terraform Content
       action: fetch:template
       input:
         url: https://github.com/regmisan/dev-portal-gcp/tree/main/templates/gcp-vm/content
+        targetPath: content
         values:
           projectId: ${{ parameters.projectId }}
           region: ${{ parameters.region }}
@@ -51,7 +52,7 @@ spec:
       name: Terraform Apply
       action: shell:execute
       input:
-        workingDirectory: ${{ steps.fetch.output.target }}
+        workingDirectory: ./content
         command: |
           terraform init
           terraform apply -auto-approve
@@ -59,4 +60,4 @@ spec:
   output:
     text:
       - title: GCP VM Created
-        content: "GCP VM ${{ parameters.instanceName }} has been provisioned in project ${{ parameters.projectId }}."
+        content: "GCP VM **${{ parameters.instanceName }}** has been provisioned in project **${{ parameters.projectId }}**."
