--- a/templates/gcp-vm/template.yaml
+++ b/templates/gcp-vm/template.yaml
@@ -32,17 +32,19 @@ spec:
           title: VM Instance Name
 
   steps:
-    - id: fetch
-      name: Fetch Terraform Template
-      action: fetch:template
-      input:
-        url: https://github.com/regmisan/dev-portal-gcp/tree/main/templates/gcp-vm/content
-        targetPath: ./terraform
-        values:
-          projectId: ${{ parameters.projectId }}
-          region: ${{ parameters.region }}
-          zone: ${{ parameters.zone }}
-          instanceName: ${{ parameters.instanceName }}
+  - id: terraformInit
+    name: Terraform Init
+    action: shell:execute
+    input:
+      workingDirectory: ./terraform/dev-portal-gcp-main/templates/gcp-vm/content
+      command: terraform init
+
+  - id: terraformApply
+    name: Terraform Apply
+    action: shell:execute
+    input:
+      workingDirectory: ./terraform/dev-portal-gcp-main/templates/gcp-vm/content
+      command: terraform apply -auto-approve
 
     - id: terraformApply
       name: Terraform Apply
