--- a/templates/gcp-vm/template.yaml
+++ b/templates/gcp-vm/template.yaml
@@ -32,26 +32,27 @@ spec:
           title: VM Instance Name
 
   steps:
-    - id: fetch-template
-      name: Fetch Template
-      action: fetch:template
-      input:
-        url: https://github.com/regmisan/dev-portal-gcp/blob/main/templates/gcp-vm
-        targetPath: .
-        values:
-          projectId: ${{ parameters.projectId }}
-          region: ${{ parameters.region }}
-          zone: ${{ parameters.zone }}
-          instanceName: ${{ parameters.instanceName }}
+  - id: fetch-template
+    name: Fetch Template
+    action: fetch:template
+    input:
+      url: https://github.com/regmisan/dev-portal-gcp/tree/main/templates/gcp-vm
+      targetPath: ./content
+      values:
+        projectId: ${{ parameters.projectId }}
+        region: ${{ parameters.region }}
+        zone: ${{ parameters.zone }}
+        instanceName: ${{ parameters.instanceName }}
 
-    - id: terraformApply
-      name: Terraform Apply
-      action: shell:execute
-      input:
-        workingDirectory: ./content
-        command: |
-          terraform init
-          terraform apply -auto-approve
+  - id: terraformApply
+    name: Terraform Apply
+    action: shell:execute
+    input:
+      workingDirectory: ./content
+      command: |
+        terraform init
+        terraform apply -auto-approve
+
 
   output:
     text:
