--- a/templates/gcp-vm/template.yaml
+++ b/templates/gcp-vm/template.yaml
@@ -51,7 +51,11 @@ spec:
         workingDirectory: ./content
         command: |
           terraform init
-          terraform apply -auto-approve
+          terraform apply -auto-approve \
+            -var "project_id=${{ parameters.projectId }}" \
+            -var "region=${{ parameters.region }}" \
+            -var "zone=${{ parameters.zone }}" \
+            -var "instance_name=${{ parameters.instanceName }}"
 
   output:
     text:
